--- a/templates/base.html
+++ b/templates/base.html
@@ -2,27 +2,124 @@
 {% load tag %}
 <html>
 <head>
+<title>科學運算程式設計</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- 引用 Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+    <link href="/static/css/layout.css" rel="stylesheet" type="text/css" media="all">
+    <link rel="stylesheet" href="/static/css/build.css"	type="text/css" media="all">	
+    <script type="text/javascript">
+    jQuery(function () {
+      $('form>p').addClass('form-group form-inline');
+      $('form input, form select, form textarea').addClass('form-control');
+    });
+    </script>	
+	{% block header %}{% endblock %}	
 </head>
 <body>
-    <h1>線上教室</h1>
-    <a href="/">首頁</a>    
-    {% if user.is_authenticated %}
-    <a href="/account/dashboard">訊息</a>     
-    <a href="/student/classroom">班級</a>  
-    {% if user|has_group:'teacher' %}
-    <a href="/teacher/classroom">教師</a>
-    {% endif %}  
-    {% if user.is_superuser %}
-    <a href="/account/user">帳號</a>
-    {% endif %}  
-    {{ user.first_name }} 
-    <a href="/account/logout">登出</a>
+<nav class="navbar fixed-top">
+  <div class="wrap toprow">
+  <div id="topbar" class="hoc clear">
+ 
+<nav class="navbar navbar-expand-lg navbar bg">
+    <div class="d-flex flex-grow-1">
+        <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="/">首頁</a>
+    </li>
+    {% if user.is_authenticated %}		  
+    <li class="nav-item">
+      <a class="nav-link" href="/account/dashboard">訊息{% if user.id|unread > 0 %}({{user.id|unread}}){% endif %}</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/student/classroom">班級</a>
+    </li>
+	{% if user.id|assistant %}
+	<li><a class="nav-link" href="/teacher/assistant">助教</a></li>
+    {% endif %}		
+	{% if user|has_group:"teacher" %}
+    <li class="nav-item">
+      <a class="nav-link" href="/teacher/classroom">教師</a>
+    </li>	
+	{% endif %}
+    {% if user.is_superuser %}	
+    <li class="nav-item">
+      <a class="nav-link" href="/account/user">帳號</a>
+    {% endif %}	  
+    </li>
+	{% endif %}
+	</ul>
+    </div>
+    <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
+        <ul class="navbar-nav ml-auto">
+    {% if user.is_authenticated %}	
+    <li>{{ user.first_name }}　</li>
+    <li class="nav-item"><a class="nav-link btn btn-outline-info" href="/account/logout">登出</a></li>
     {% else %}
-    <a href="/account/user/create">註冊新帳號</a>  
-    <a href="/account/login">登入</a>
+    <li class="nav-item"><a class="nav-link btn btn-outline-info" href="/account/login">登入</a></li>
     {% endif %} 
-    <hr>
-{% block content %}
-{% endblock %}        
+        </ul>
+    </div>
+</nav>
+</div>
+</div>
+</nav>
+<div class="container">
+  <main class="container"> 
+		{% block content %}{% endblock %}
+  </main>		
+</div> 
+<div class="wrap footer">
+  <div id="footer" class="hoc clear"> 
+    <p class="fl_left">&copy; 國立臺灣師範大學資訊教育研究所</p>
+    <p class="fl_right">網站開發：高慧君、魏仲良</a></p>
+  </div>
+</div>
+<a id="backtotop" href="#top"><i class="fa fa-chevron-up btn-info"> </i></a>
+<!-- JAVASCRIPTS -->
+<script>
+  var csrftoken = $.cookie('csrftoken');
+  function csrfSafeMethod(method) {
+    // these HTTP methods do not require CSRF protection
+    return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+  }
+  
+  $.ajaxSetup({
+    beforeSend: function(xhr, settings) {
+      if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+        xhr.setRequestHeader("X-CSRFToken", csrftoken);
+      }
+    }
+  });
+ 
+  $(document).ready(function(){
+    $('main').css('padding-top', $('.toprow').height());
+    {% block domready %}
+    {% endblock %}
+  });
+  {% block userscript %}
+  
+  {% endblock %}
+  $("#backtotop").click(function () {
+    $("body,html").animate({
+        scrollTop: 0
+    }, 600);
+});
+   $(window).scroll(function () {
+    if (jQuery(window).scrollTop() > 150) {
+        jQuery("#backtotop").addClass("visible");
+    } else {
+        jQuery("#backtotop").removeClass("visible");
+    }
+});  
+</script>        
+{% block footer_script %}
+{% endblock %}
 </body>
 </html>
