--- a/templates/base.html
+++ b/templates/base.html
@@ -77,8 +77,8 @@
 </div> 
 <div class="wrap footer">
   <div id="footer" class="hoc clear"> 
-    <p class="fl_left">&copy; 國立臺灣師範大學資訊教育研究所</p>
-    <p class="fl_right">網站開發：高慧君、魏仲良</a></p>
+    <p class="fl_left">2019 &copy; 國立臺灣師範大學資訊教育研究所</p>
+    <p class="fl_right"></p>
   </div>
 </div>
 <a id="backtotop" href="#top"><i class="fa fa-chevron-up btn-info"> </i></a>
