--- a/teacher/templates/teacher/announce_form.html
+++ b/teacher/templates/teacher/announce_form.html
@@ -1,14 +1,37 @@
 {% extends "base.html" %}
-
-{% load tag %}
+{% block header %}
+<script type="text/javascript" src="//cdn.ckeditor.com/4.5.9/standard-all/ckeditor.js"></script>
+<script>
+CKEDITOR.plugins.add('dreamerpasteimage', {
+    init: function(editor) {
+        editor.on('paste', function(e) {
+            var reader = new FileReader();
+            reader.onload = function(evt) {
+                var img = CKEDITOR.dom.element.createFromHtml("<img src='"+evt.target.result+"' />");
+                e.editor.insertElement(img);
+            }
+            e.data.dataTransfer._.files.forEach(function(file, index) {
+                console.log('paste: '+index);
+                reader.readAsDataURL(file);
+            });
+        });
+    },
+});
+</script>
+{% endblock %}
 {% block content %}
-        <h1>公告班級：{{classroom.name}}</h1>
+        <h1>班級名稱：{{classroom.name}}</h1>
          <form action="" enctype="multipart/form-data"  method="post">
             <table class="table">
-                {{ form.as_table }}       
-            <tr><td></td><td><input id="submit" type="submit" value="送出"><td</tr>
+                {{ form.as_table }}
+                <tr><th>檔案:</td><td><input id="file" name="files" type="file"  multiple/><input id="submit" type="submit" value="送出"><td</tr>
+
             </table>
             {% csrf_token %}
-
         </form>
+{% endblock %}
+{% block domready %}
+    CKEDITOR.replace("id_content", {
+        extraPlugins: 'colorbutton,colordialog,dreamerpasteimage',
+    } );	
 {% endblock %}
