--- a/student/templates/student/classmate.html
+++ b/student/templates/student/classmate.html
@@ -1,9 +1,8 @@
 {% extends "base.html" %}
 {% load tag %}
 {% block content %}
-<table>
+<table class="table">
   <tr>
-      <th>學校</th>
       <th>帳號</th>
       <th>座號</th>        
       <th>姓名</th>
@@ -11,7 +10,6 @@
   </tr>
 {% for enroll in enroll_list %}
   <tr>
-    <td>{{enroll.student.last_name}}</td>
     <td>{{enroll.student.username}}</td>
     <td>{{enroll.seat}}</td>
     <td>{{enroll.student.first_name}}</td>
