--- a/student/templates/student/classroom_join.html
+++ b/student/templates/student/classroom_join.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load tag %}
 {% block content %}
-<table>
+<table class="table">
   <tr>
   <th>班級名稱</th>   
   <th>功能</th>       
