--- a/teacher/templates/teacher/assistant_user.html
+++ b/teacher/templates/teacher/assistant_user.html
@@ -1,9 +1,16 @@
 {% extends "base.html" %}
-{% load tag %}
-{% block content %}       
-        <table class="table" style="width:100%">
+{% block title %} Teachers {% endblock %}
+{% block content %}
+<a href="/teacher/classroom/assistant/{{classroom.id}}" class="btn btn-outline-success" role="btn">{{classroom.name}}</a>
+ 搜尋帳號：
+    <form action="."  method="get">
+      <input type="text" name = "account"><input type="submit" value="送出"/>
+    </form>
+        <tr>
+          
+        <table class="table">
             <td>帳號</td>
-            <td>姓名</td>  
+            <td>姓名</td>
             <td>最新登入</td>
             <td>功能</td>
         </tr>
@@ -13,22 +20,21 @@
                 <td>{{user.first_name}}</td>
                 <td>{{user.last_login}}</td>
                 <td>
-                {% if user|has_group:"teacher"  %}<a href="#" data-userid="{{ user.id }}" data-action="unset" class="teacher btn btn-primary active" role="button">取消教師</a>{% else %}<a href="#" data-userid="{{ user.id }}" data-action="set" class="teacher btn btn-outline-success" role="button">設為教師</a>{% endif %}
-                <A href="/account/user/{{user.id}}/password" class="btn btn-outline-success" role="button">重設密碼</a>
+                {% if user.id in assistants  %}<a href="#" data-classroomid="{{classroom.id}}" data-userid="{{ user.id }}" data-action="unset" class="assistant btn btn-primary active" role="button">取消助教</a>{% else %}<a href="#" data-classroomid="{{classroom.id}}" data-userid="{{ user.id }}" data-action="set" class="assistant btn btn-outline-success" role="button">設為助教</a>{% endif %}
             </tr>
         {% endfor %}
         </table>
-        {% load pagination %}
-        {% get_pagination %}
+        {% include "pagination.html" with page=page_obj %}
 {% endblock %}
 
 {% block domready %}
-  $('a.teacher').click(function(e){
+  $('a.assistant').click(function(e){
     var launcher = this;  
     e.preventDefault();
-    $.post('/account/teacher/make/',
+    $.post('/teacher/assistant/make/',
       {
         userid: $(launcher).data('userid'),
+        classroomid: $(launcher).data('classroomid'),
         action: $(launcher).data('action')
       },
       function(data){
@@ -37,11 +43,11 @@
           var previous_action = $(launcher).data('action');
 		      if (previous_action == 'set') {
                $(launcher).removeClass("btn-outline-success").addClass("btn-primary active");
-               $(launcher).html("取消教師");
+               $(launcher).html("取消助教");
                $(launcher).data('action', 'unset');
            } else {
                $(launcher).removeClass("btn-primary active").addClass("btn-outline-success");
-               $(launcher).html("設為教師");
+               $(launcher).html("設為助教");
                $(launcher).data('action', 'set');               
            }
         } else {
