--- a/teacher/templates/teacher/classroom_list.html
+++ b/teacher/templates/teacher/classroom_list.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% load tag %}
 {% block content %}
-<a href="/teacher/classroom/create">新增班級</a>
-<table>
+<a href="/teacher/classroom/create" role="button" class="btn btn-primary active">新增班級</a>
+<table class="table">
   <tr>
   <th>班級名稱</th>   
   <th>選課密碼</th>
@@ -13,9 +13,10 @@
   <td>{{classroom.name}}</td>
   <td>{{classroom.password}}</td>
   <td>
-    <a href="/teacher/classroom/{{classroom.id}}/update">修改</a>
-    <a href="/student/classroom/{{classroom.id}}/classmate">學生</a>
-    <a href="/teacher/announce/{{classroom.id}}/create">公告</a>      
+    <a href="/teacher/classroom/{{classroom.id}}/update" role="button" class="btn btn-outline-success">修改</a>
+    <a href="/student/classroom/{{classroom.id}}/classmate" role="button" class="btn btn-outline-success">學生</a>
+    <a href="/teacher/classroom/assistant/{{classroom.id}}" role="button" class="btn btn-outline-success">助教</a>     
+    <a href="/teacher/announce/{{classroom.id}}" role="button" class="btn btn-success">公告</a>       
   </td>
   </tr>
 {% endfor %}
