--- a/templates/base.html
+++ b/templates/base.html
@@ -6,11 +6,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- 引用 Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
     <link href="/static/css/layout.css" rel="stylesheet" type="text/css" media="all">
     <link rel="stylesheet" href="/static/css/build.css"	type="text/css" media="all">	
@@ -33,22 +33,22 @@
     <li class="nav-item">
       <a class="nav-link" href="/">首頁</a>
     </li>
-    {% if user.is_authenticated %}		  
+    {% if request.user.is_authenticated %}		  
     <li class="nav-item">
-      <a class="nav-link" href="/account/dashboard">訊息{% if user.id|unread > 0 %}({{user.id|unread}}){% endif %}</a>
+      <a class="nav-link" href="/account/dashboard">訊息{% if request.user.id|unread > 0 %}({{request.user.id|unread}}){% endif %}</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="/student/classroom">班級</a>
     </li>
-	{% if user.id|assistant %}
+	{% if request.user.id|assistant %}
 	<li><a class="nav-link" href="/teacher/assistant">助教</a></li>
     {% endif %}		
-	{% if user|has_group:"teacher" %}
+	{% if request.user|has_group:"teacher" %}
     <li class="nav-item">
       <a class="nav-link" href="/teacher/classroom">教師</a>
     </li>	
 	{% endif %}
-    {% if user.is_superuser %}	
+    {% if request.user.is_superuser %}	
     <li class="nav-item">
       <a class="nav-link" href="/account/user">帳號</a>
     {% endif %}	  
@@ -58,10 +58,11 @@
     </div>
     <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
         <ul class="navbar-nav ml-auto">
-    {% if user.is_authenticated %}	
-    <li>{{ user.first_name }}　</li>
+    {% if request.user.is_authenticated %}	
+    <li>{{ request.user.first_name }}　</li>
     <li class="nav-item"><a class="nav-link btn btn-outline-info" href="/account/logout">登出</a></li>
     {% else %}
+    <li class="nav-item"><a class="nav-link btn btn-outline-info" href="/account/user/create">註冊</a></li>    
     <li class="nav-item"><a class="nav-link btn btn-outline-info" href="/account/login">登入</a></li>
     {% endif %} 
         </ul>
