--- a/templates/form.html
+++ b/templates/form.html
@@ -4,7 +4,7 @@
 
 <form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    <table>
+    <table class="table">
     {{ form.as_table }}
       <tr><td></td><td><input type="submit" value="送出" /></td></tr>
     </table>    
