--- a/student/templates/student/classroom_list.html
+++ b/student/templates/student/classroom_list.html
@@ -13,6 +13,7 @@
   <td>
     <a href="/student/classroom/{{enroll.id}}/seat" role="btn" class="btn btn-outline-success">座號</a>
     <a href="/student/classroom/{{classroom.id}}/classmate" role="btn" class="btn btn-outline-success">同學</a>
+    <a href="/student/work/1/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-outline-success">作業</a>
   </td>
   </tr>
 {% endfor %}
