fix expression & flow editor

--- a/teacher/templates/teacher/work_list.html
+++ b/teacher/templates/teacher/work_list.html
@@ -1,19 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
-        <a href="/teacher/work/add/{{lesson}}/{{classroom.id}}"  role="button" class="btn btn-primary">新增作業</a><BR><BR>
-        <table class="table">
-            <tr>
-                <td>名稱</td>
-                <td>時間</td>				
-                <td colspan=2>功能</td>		
-        {% for work in works %}
-            <tr>
-            <td>{{forloop.revcounter}})<a href="/teacher/work/update/{{work.id}}/{{classroom.lesson}}/{{classroom.id}}">{{work.title}}</a></td>
-			<td>{{work.time}}</td>
-			<td><a href="/teacher/work/question/{{classroom.lesson}}/{{classroom.id}}/{{work.id}}">現象問題</a></td>
-			<td><a href="/teacher/work/class/{{classroom.lesson}}/{{classroom.id}}/{{work.id}}">評分</a></td>
-            <td><a href="/student/work/memo/1/{{classroom.lesson}}/{{classroom.id}}/{{work.id}}">心得</a></td>			
-            </tr>
-        {% endfor %}
-        </table>		
+<a href="/teacher/work/add/{{lesson}}/{{classroom.id}}" role="button" class="btn btn-primary">新增作業</a><BR><BR>
+<table class="table">
+    <tr>
+        <td>名稱</td>
+        <td>時間</td>
+        <td colspan=3>功能</td>
+    </tr>
+    {% for work in works %}
+    <tr>
+        <td><span class="badge badge-secondary">{{forloop.revcounter}}</span> <a href="/teacher/work/update/{{work.id}}/{{classroom.lesson}}/{{classroom.id}}">{{work.title}}</a></td>
+        <td>{{work.time}}</td>
+        <td><a href="/teacher/work/update/{{work.id}}/{{classroom.lesson}}/{{classroom.id}}">修改</a></td>
+        <td><a href="/teacher/work/class/{{classroom.lesson}}/{{classroom.id}}/{{work.id}}">評分</a></td>
+        <td><a href="/student/work/memo/1/{{classroom.lesson}}/{{classroom.id}}/{{work.id}}">心得</a></td>
+    </tr>
+    {% endfor %}
+</table>
 {% endblock %}
