--- a/student/templates/student/submitF1.html
+++ b/student/templates/student/submitF1.html
@@ -1,23 +1,23 @@
 {% load tag %}
 <section class="wrapper">
-  <h2>{{question.question|safe|linebreaks}}</h2>
+  <h2>{{question|safe|linebreaks}}</h2>
   <ul class="nav nav-pills" id="myTab" role="tablist">
     <li class="nav-item">
-      <a class="nav-link active" data-toggle="tab" href="#tab{{question.id}}11" role="tab" aria-selected="true">上傳文字</a>
+      <a class="nav-link active" data-toggle="tab" href="#tab{{q_index}}11" role="tab" aria-selected="true">上傳文字</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" href="#tab{{question.id}}12" role="tab" aria-selected="true">上傳圖片</a>
+      <a class="nav-link" data-toggle="tab" href="#tab{{q_index}}12" role="tab" aria-selected="true">上傳圖片</a>
     </li>
   </ul>
   <br/>
   <div class="tab-content" id="myTabContent">
-    <div class="tab-pane fade show active" id="tab{{question.id}}11" role="tabpanel" aria-labelledby="tab11-tab">
+    <div class="tab-pane fade show active" id="tab{{q_index}}11" role="tabpanel" aria-labelledby="tab11-tab">
       <form action="" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <input type=hidden name="types" value="11">
         <input type=hidden name="index" value="{{index}}"> 
         <input type=hidden name="q_index" value="{{q_index}}">     		
-        <input type=hidden name="question_id" value="{{question.id}}">     		
+        <input type=hidden name="question_id" value="{{q_index}}">     		
         <div class="form-group">
           <label for="text-memo">文字</label>
           <textarea name="text" id="text-memo" rows="10" class="form-control"></textarea>
@@ -25,13 +25,13 @@
         <input type="submit" value="送出" class="btn btn-info" />
       </form>
     </div>
-    <div class="tab-pane fade" id="tab{{question.id}}12" role="tabpanel" aria-labelledby="tab12-tab">
+    <div class="tab-pane fade" id="tab{{q_index}}12" role="tabpanel" aria-labelledby="tab12-tab">
 	      <form action="" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <input type=hidden name="types" value="12">
         <input type=hidden name="index" value="{{index}}"> 
         <input type=hidden name="q_index" value="{{q_index}}">  		
-        <input type=hidden name="question_id" value="{{question.id}}">     			
+        <input type=hidden name="question_id" value="{{q_index}}">     			
         <div class="form-group">
           <label for="content_file">檔案</label>
           <input id="content_file" name="pic" type="file" />
