--- a/student/templates/student/work_list.html
+++ b/student/templates/student/work_list.html
@@ -6,7 +6,7 @@
   </tr>
   {% for lesson, work in lessons %}
   <tr>
- 	 <td>{% if typing == "0" %}{% if classroom.lesson == 1 %}{{forloop.counter}}{% else %}{{lesson.0}}{% endif %}{% else %}{{forloop.revcounter}}{% endif %}){% if typing == "0" %}{% if classroom.lesson == 1%}{{lesson.2}}{% else %}{{lesson.1}}{% endif %}{% else %}{{lesson.title}}{% endif %}</td>
+ 	  <td><span class="badge badge-secondary">{% if typing == "0" %}{% if classroom.lesson == 1 %}{{forloop.counter}}{% else %}{{lesson.0}}{% endif %}{% else %}{{forloop.revcounter}}{% endif %}</span> {% if typing == "0" %}{% if classroom.lesson == 1%}{{lesson.2}}{% else %}{{lesson.1}}{% endif %}{% else %}{{lesson.title}}{% endif %}</td>
     <td>{% if not work.score or work.score < 0  %}<a href="/student/work/submit/{{typing}}/{{classroom.lesson}}/{% if typing == 0 %}{{forloop.counter}}{% else %}{{lesson.id}}{% endif %}">繳交</a>{% endif %}</td>
     <td><a href="/student/work/show/{{typing}}/{{classroom.lesson}}/{% if typing == 0 %}{{forloop.counter}}{% else %}{{lesson.id}}{% endif %}/{{user.id}}">觀看({{work.publication_date}}){% if work.score > -1 %}--{{work.score}}{% endif %}</a></td>
     <!--
