--- a/templates/form.html
+++ b/templates/form.html
@@ -3,10 +3,13 @@
 {% block content %}
 
 <form action="" method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    <table class="table">
+  {% csrf_token %}
+  <table class="table">
     {{ form.as_table }}
-      <tr><td></td><td><input type="submit" value="送出" /></td></tr>
-    </table>    
+    <tr>
+      <td></td>
+      <td><input type="submit" value="送出" class="btn btn-primary" /></td>
+    </tr>
+  </table>
 </form>
 {% endblock %}
