--- a/teacher/templates/teacher/classroom_list.html
+++ b/teacher/templates/teacher/classroom_list.html
@@ -18,6 +18,7 @@
     <a href="/teacher/classroom/assistant/{{classroom.id}}" role="button" class="btn btn-outline-success">助教</a>     
     <a href="/teacher/announce/{{classroom.id}}" role="button" class="btn btn-outline-success">公告</a> 
     <a href="/teacher/work/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-outline-success">作業</a>              
+    <a href="/teacher/log/{{classroom.id}}" role="button" class="btn btn-outline-success">記錄</a>              
   </td>
   </tr>
 {% endfor %}
