--- a/student/templates/student/submitF1.html
+++ b/student/templates/student/submitF1.html
@@ -49,12 +49,13 @@
               {% if work.types == 12 %}
   <div class="card-header"><button type="button" class="btn btn-default">{{forloop.counter}}</button>
     <A href="/student/work/content/delete/{{work.types}}/{{typing}}/{{lesson}}/{{index}}/{{work.id}}" onclick="return confirm('確定要刪除嗎?')"><img src="/static/images/delete.gif"> 刪除</a>
-  </div>
-  <div class="card-body"><img src="/static/upload/{{ work.picname }}" style="max-width:900px"></div>                      
+      </div>
+   <div class="card-body"><img src="/static/upload/{{ work.picname }}" style="max-width:900px"></div>                      
               {% elif work.types == 11 %}
   <div class="card-header"><button type="button" class="btn btn-default">{{forloop.counter}}</button>
     <A href="/student/work/content/delete/{{work.types}}/{{typing}}/{{lesson}}/{{index}}/{{work.id}}" onclick="return confirm('確定要刪除嗎?')"><img src="/static/images/delete.gif"> 刪除</a>
-  </div>  
+    <A href="/student/work/content/edit/{{work.types}}/{{typing}}/{{lesson}}/{{index}}/{{work.id}}"><img src="/static/images/edit.gif"> 修改</a>
+      </div>  
   <div class="card-body">{{ work.text|memo|safe }}</div>
             {% endif %}
 </div>
