--- a/student/templates/student/submitF22.html
+++ b/student/templates/student/submitF22.html
@@ -35,3 +35,5 @@
     <button class="btn btn-info form-control" id="flow-submit">送出</button>
   </div>
 </div>
+<hr />
+<div class="list-group" id="flow-history"></div>
