--- a/student/templates/student/submitF4.html
+++ b/student/templates/student/submitF4.html
@@ -10,6 +10,7 @@
       <a class="nav-link" id="nav-link-{{work.id}}" data-toggle="tab" href="#tab4{{forloop.counter}}" role="tab" aria-selected="true">{{forloop.counter}}</a>
     </li>
     {% endfor %}    
+    {% if user_id == request.user.id %}
     <li class="nav-item">
         <a class="nav-link" data-toggle="tab" href="#tab40" role="tab" aria-selected="true">上傳心得</a>
       </li>       
@@ -23,11 +24,23 @@
         <input type=hidden name="index" value="{{index}}">        
         <div class="form-group">
           <label for="text-memo">心得</label>
-          <textarea name="memo" id="text-memo" rows="10" class="form-control">{{work4.memo}}</textarea>
+          <textarea name="memo" id="text-memo" rows="10" class="form-control">{% if work4 %}{{work4.0.memo}}{% endif %}</textarea>
         </div>
         <input type="submit" value="送出" class="btn btn-info" />
       </form>
+      {% for memo in work4 %}
+      <div class="card card-default"> 
+         <div class="card-header"><button type="button" class="btn btn-default">{{forloop.revcounter}}</button>
+           {{memo.publication_date}}
+         </div>
+         <div class="card-body">
+          {{memo.memo}}
+         </div>
+         </div>
+      {% endfor %}
     </div>
+
+
     <div class="tab-pane fade all show active" id="tab4a" role="tabpanel" aria-labelledby="tab4-tab">
         {% for debug in contents4 %}
         <div class="card card-default"> 
@@ -44,6 +57,7 @@
         </div>
         {% endfor %}
       </div>
+      {% endif %}
     {% for work in works3 %}
     <div class="tab-pane fade code{{work.id}}" id="tab4{{forloop.counter}}" role="tabpanel" aria-labelledby="tab3{{forloop.counter}}-tab">    
             <font color=black>程式碼：</font><BR>
