--- a/teacher/templates/teacher/work_list.html
+++ b/teacher/templates/teacher/work_list.html
@@ -12,8 +12,8 @@
         <td><span class="badge badge-secondary">{{forloop.revcounter}}</span> <a href="/teacher/work/update/{{work.id}}/{{classroom.lesson}}/{{classroom.id}}">{{work.title}}</a></td>
         <td>{{work.time}}</td>
         <td><a href="/teacher/work/update/{{work.id}}/{{classroom.lesson}}/{{classroom.id}}">修改</a></td>
-        <td><a href="/teacher/work/class/{{classroom.lesson}}/{{classroom.id}}/{{work.id}}">評分</a></td>
-        <td><a href="/student/work/memo/1/{{classroom.lesson}}/{{classroom.id}}/{{work.id}}">心得</a></td>
+        <td><a href="/teacher/work/score/{{classroom.lesson}}/{{classroom.id}}/{{work.id}}">評分</a></td>
+        <td><a href="/student/work/memo/{{classroom.id}}/{{classroom.lesson}}/{{forloop.revcounter}}">心得</a></td>
     </tr>
     {% endfor %}
 </table>
