--- a/student/templates/student/submitF3.html
+++ b/student/templates/student/submitF3.html
@@ -64,7 +64,9 @@
       </li>
       {% endfor %}
     </ul>
+
     <div class="tab-content" id="myTabContentQ">   
+            {% if user_id == request.user.id %}
             <div class="tab-pane fade show active" id="tab30" role="tabpanel" aria-labelledby="home-tab">	
                         <form name="myForm" id="form{{index}}" action="" method="post" enctype="multipart/form-data" onsubmit="return validateForm()">{% csrf_token %}
                             <input type=hidden name="types" value="3">
@@ -100,7 +102,8 @@
                         </div>
                     </form>
                 </div>
-            
+
+                {% endif %}
                 {% for work in works3 %}
                 <div class="tab-pane fade " id="tab3{{forloop.counter}}" role="tabpanel" aria-labelledby="tab3{{forloop.counter}}-tab">
                         <label>創作過程：</label>
