--- a/teacher/templates/teacher/assistant_list.html
+++ b/teacher/templates/teacher/assistant_list.html
@@ -8,7 +8,8 @@
                 <a href="/student/classroom/{{classroom.id}}/classmate" class="btn btn-outline-success" role="btn"><span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span> 學生</a>
                 <a href="/teacher/announce/{{classroom.id}}" class="btn btn-outline-success" role="btn"><span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span> 公告</a>  
 							  <a href="/teacher/work/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-outline-success">作業</a>         
-  <!--
+                <a href="/teacher/log/{{classroom.id}}" role="button" class="btn btn-outline-success">記錄</a> 
+                 <!--
     <a href="/teacher/work/{{classroom.id}}" class="btn btn-primary" role="btn"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span> 專題</a>
 -->  
   </div>
