--- a/student/templates/student/submitF1E.html
+++ b/student/templates/student/submitF1E.html
@@ -10,6 +10,7 @@
         <input type=hidden name="q_index" value="{{q_index}}">     		
         <input type=hidden name="question_id" value="{{q_index}}">  
         <input type=hidden name="content_id" value="{{instance.id}}">   		
+        <input type=hidden name="content_date" value="{{instance.publication_date}}">   		        
         <div class="form-group">
           <label for="text-memo">文字</label>
           <textarea name="text" id="text-memo" rows="10" class="form-control">{{instance.text}}</textarea>
