--- a/student/templates/student/submitF22.html
+++ b/student/templates/student/submitF22.html
@@ -13,6 +13,7 @@
       <div class="new-flow-op">
         <button class="btn btn-sm btn-dark disabled">新增流程 &gt; </button>
         <div class="new-flow-type">
+          <button class="btn btn-sm btn-outline-dark new-flow-process">處理</button>
           <button class="btn btn-sm btn-outline-dark new-flow-input">輸入</button>
           <button class="btn btn-sm btn-outline-dark new-flow-output">輸出</button>
           <button class="btn btn-sm btn-outline-dark new-flow-loop">迴圈</button>
