--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -5,19 +5,9 @@
 {% if form.errors %}
 <p>帳號或密碼不符合，請再試一次。</p>
 {% endif %}
-
-<form method="post" action=".">
-{% csrf_token %}
-<div>
-  <td>帳號：</td>
-  <td>{{ form.username }}</td>
-</div>
-<div>
-  <td>密碼：</td>
-  <td>{{ form.password }}</td>
-</div>
-<div>
-  <input type="submit" value="登入" />
-</div>
+<form method="post" action="">
+  {% csrf_token %}
+  {{ form.as_p }}
+  　<input type="submit" class="btn btn-info" value="登入" />
 </form>
 {% endblock %}
