fix: convert json string to python object

--- a/student/templates/student/submitF21.html
+++ b/student/templates/student/submitF21.html
@@ -289,7 +289,9 @@
 </div>
 
 <script>
-  var assignment = {{ assignment.description|safe }}
+  const False = false;
+  const None = undefined;
+  var assignment = {{ assignment.description|safe }};
   var exprdata = {{ expr.data|safe }};
   var flowdata = {{ flow.data|safe }};
 </script>
